# DLMedImageIO

./: .gitignore
cpp/: CMakeLists.txt  Config.h.in  Main.cpp  main.cpp  opencv-test.cpp
cpp/Common/: ArrayUtils.h  constants.h  test_utils.cpp  test_utils.h  types.h
cpp/IO/: CMakeLists.txt
cpp/IO/include/: BaseReader.h  IO_utils.h  NIfTIReader.h  NRRDReader.h  utils.h
cpp/IO/src/: BaseReader.cpp  IO_utils.cpp  NIfTIReader.cpp  NRRDReader.cpp  utils.cpp
cpp/IO/test/: test_IO.cpp  test_IO_utils.cpp  test_NIfTI.cpp  test_NRRD.cpp
cpp/IO/test/fixtures/: 2D.txt  2D_raw.nrrd  3D.txt  3D_gz.nrrd  3D_raw.nrrd
cpp/IO/test/fixtures/NIfTI/: 2D_short.nii  3D_short.nii
cpp/IO/test/fixtures/NRRD/: 2D_char_gz.nrrd  2D_int_gz.nrrd  2D_long_gz.nrrd  2D_short_gz.nrrd
cpp/Image/: CMakeLists.txt
cpp/Image/include/: BaseHeader.h  BaseImage.h  Image.h  ImageHeader.h  NIfTIHeader.h  NRRDHeader.h  NRRDImage.h  Visitor.h
cpp/Image/src/: BaseImage.cpp  Image.cpp  NRRDImage.cpp
cpp/Image/test/: test_Image.cpp
cpp/Zip/: CMakeLists.txt
cpp/Zip/include/: GZip.h  IZip.h
cpp/Zip/src/: GZip.cpp
cpp/Zip/test/: test_gzip.cpp  test_zip.cpp
cpp/Zip/test/fixtures/: unzipped.txt
